--- a/app/src/main/res/layout/content_flash_card.xml
+++ b/app/src/main/res/layout/content_flash_card.xml
@@ -37,6 +37,7 @@
             android:id="@+id/button4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onButton4Click"
             android:text="Button" />
 
         <Button
