--- a/app/src/main/res/layout/content_flash_card.xml
+++ b/app/src/main/res/layout/content_flash_card.xml
@@ -31,6 +31,7 @@
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onButton3Click"
             android:text="Button" />
 
         <Button
