Testing nullable values
-Testing a nullable value
-Testing the Elvis operator

--- a/app/src/main/res/layout/content_flash_card.xml
+++ b/app/src/main/res/layout/content_flash_card.xml
@@ -25,6 +25,7 @@
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onButton2Click"
             android:text="Button" />
 
         <Button
